...
            android:textColor="@color/text_on_display"
            android:textSize="@dimen/button_text_size_small"
            android:visibility="gone"
            android:alpha="0.7" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="0"
            android:textColor="@color/text_on_display"
            android:textSize="@dimen/display_text_size_medium"
...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClearAll"
            style="@style/CalculatorButton.Function"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clear_all" />

...
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/percent" />

        <Button
            android:id="@+id/btnDivide"
            style="@style/CalculatorButton.Operator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/divide" />

...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/seven" />

        <Button
            android:id="@+id/btn8"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eight" />

        <Button
            android:id="@+id/btn9"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nine" />

        <Button
            android:id="@+id/btnMultiply"
            style="@style/CalculatorButton.Operator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply" />

...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/four" />

        <Button
            android:id="@+id/btn5"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/five" />

        <Button
            android:id="@+id/btn6"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/six" />

        <Button
            android:id="@+id/btnSubtract"
            style="@style/CalculatorButton.Operator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/subtract" />

...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/one" />

        <Button
            android:id="@+id/btn2"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/two" />

        <Button
            android:id="@+id/btn3"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/three" />

        <Button
            android:id="@+id/btnAdd"
            style="@style/CalculatorButton.Operator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add" />

...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn0"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/zero" />

        <Button
            android:id="@+id/btnDecimal"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/decimal" />

        <Button
            android:id="@+id/btnEquals"
            style="@style/CalculatorButton.Operator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equals" />

...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDelete"
            style="@style/CalculatorButton.Function"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/delete" />

    </LinearLayout>
...
